<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/numeric_keyboard_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/kb_background"
    android:orientation="vertical"
    android:padding="8dp"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="1" />
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="2" />
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="4" />
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="5" />
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="7" />
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="8" />
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="." />
        <Button style="@style/KeyboardKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="0" />
        <Button android:id="@+id/btn_del" style="@style/SpecialKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:drawableTop="@drawable/ic_backspace" android:contentDescription="@string/desc_delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/btn_switch_alpha" style="@style/SpecialKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/key_mode_alpha" />
        <Button android:id="@+id/btn_randomize" style="@style/SpecialKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/key_random" android:contentDescription="@string/desc_random" />
        <Button android:id="@+id/btn_reset" style="@style/SpecialKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/key_reset" android:contentDescription="@string/desc_reset" />
        <Button android:id="@+id/btn_switch_ime" style="@style/SpecialKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:drawableTop="@drawable/ic_ime_switch" android:contentDescription="@string/desc_ime" />
        <Button android:id="@+id/btn_enter" style="@style/SpecialKeyStyle" android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="2" android:drawableTop="@drawable/ic_enter" android:contentDescription="@string/desc_enter" />
    </LinearLayout>

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

</LinearLayout>
